# grmot

./: CITATION.cff  Cargo.toml  README.md  pyproject.toml
docker/: Dockerfile  run_grmot.sh
examples/: .start_jupyter.sh.~undo-tree~  TEST5_0.npz  arkalochori-Copy1.ipynb  example1.ipynb  plot_arkalochori.ipynb  start_jupyter.sh
examples/.ipynb_checkpoints/: arkalochori-Copy1-checkpoint.ipynb  arkalochori-checkpoint.ipynb  example1-checkpoint.ipynb  plot_arkalochori-checkpoint.ipynb
grmot/: .__init__.py.~undo-tree~  .utils.py.~undo-tree~  __init__.py  utils.py
images/: .grmot_logo.png.~undo-tree~
src/: .lib.rs.~undo-tree~  .lib.rs_bak.~undo-tree~  .lib3l.rs.~undo-tree~  .libb.rs.~undo-tree~  lib.rs
