[package]
name = "grmot"
version = "0.9.0"
authors = ["Costas Smaragdakis <kesmarag@gmail.com>"]
edition = "2018"

[dependencies]
num="0.4.0"
rayon="1.5.1"
ndarray = {version = "0.15.0", features = ["rayon"]}
pyo3 = { version = "0.15.1", features = ["extension-module"] }
rustfft="6.0.1"
nalgebra = "0.30.0"
# mimalloc = { version = "*", default-features = false }

[package.metadata.maturin]
requires-dist = ["pyproj","numpy","scipy"]

[lib]
name = "grmot"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
